# MetaGPT

.github/workflows/: app-cicd.yml
example_app/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
example_app/app/: main.py
